--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Alien News</string>
-    <string name="channel_name">Test channel</string>
-    <string name="latest_update">Updated: 12.12.2081</string>
+    <string name="channel_name">REMOVE</string>
+    <string name="latest_update">REMOVE</string>
+    <string name="connection_issue">Connection issue</string>
 </resources>
