--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">Alien News</string>
-    <string name="channel_name">REMOVE</string>
-    <string name="latest_update">REMOVE</string>
     <string name="connection_issue">Connection issue</string>
     <string name="server_url">Alien satellite address</string>
     <string name="pin">4 symbol password</string>
     <string name="connect">Connect</string>
     <string name="cancel">Cancel</string>
     <string name="contacts">Contacts</string>
+    <string name="connection_settings">Connection settings</string>
+    <string name="connect_server">Connect to server</string>
+    <string name="disconnect">Disconnect from server</string>
 </resources>
