--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Alien News</string>
     <string name="connection_issue">Connection issue</string>
-    <string name="server_url">Alien satellite address</string>
+    <string name="username">Alien satellite address</string>
     <string name="pin">4 symbol password</string>
     <string name="connect">Connect</string>
     <string name="cancel">Cancel</string>
