--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -10,4 +10,5 @@
     <string name="connection_settings">Yhteysasetukset</string>
     <string name="connect_server">Yhdistä</string>
     <string name="disconnect">Lopeta yhteys</string>
+    <string name="updated">Päivitetty:</string>
 </resources>
