--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="connect_server">Connect to server</string>
     <string name="disconnect">Disconnect from server</string>
     <string name="updated">Updated: %s</string>
+    <string name="all_news_images">See all images</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
